--- a/src/main/resources/templates/addPage.html
+++ b/src/main/resources/templates/addPage.html
@@ -1,43 +1,95 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
+<html lang="en" class="h-100"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Add user</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Create User</title>
 </head>
 <body>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Log out"/>
-</form>
-<br>
-<div>
-    <form th:method="POST" th:action="@{/admin/addNewUser}" th:object="${user}">
-        <label for="age">Enter age:</label>
-        <input type="text" th:field="*{age}" id="age"/>
-        <div style="color: red" th:if="${#fields.hasErrors('age')}" th:errors="*{age}">Age error</div>
-        <br/>
-        <label for="email">Enter email:</label>
-        <input type="text" th:field="*{email}" id="email"/>
-        <div style="color: red" th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Email error</div>
-        <br/>
-        <label for="username">Enter username:</label>
-        <input type="text" th:field="*{username}" id="username"/>
-        <br/>
-        <label for="password">Enter password:</label>
-        <input type="text" th:field="*{password}" id="password"/>
-        <br/>
 
-        <label>Roles:
-            <input type="checkbox" name="roles"
-                   th:each="role : ${roles}"
-                   th:text="${role.getRole()}"
-                   th:value="${role.getRole()}"
-                   th:field="*{roles}"
-            />
-        </label>
-        <br/>
-        <input type="submit" value="Create!">
-    </form>
-</div>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <p class="navbar-brand text-white">
+            <b><span class="align-middle" th:text="${user.email}"></span></b>
+            <span class="align-middle">with roles:</span>
+            <span class="align-middle" th:each="role: ${user.getRoles}" th:text="${role.getRole()} + ' '"></span>
+        </p>
+        <form th:action="@{/logout}" method="post">
+            <button type="submit" class="btn btn-dark text-secondary">Logout</button>
+        </form>
+    </div>
+</nav>
+
+<section>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-2 p-0">
+                <div class="nav flex-column nav-pills pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                    <a class="nav-link active" aria-controls="v-pills-home" aria-selected="true">Admin</a>
+                    <a class="nav-item nav-link" th:href="@{/user}">User</a>
+                </div>
+            </div>
+            <div class="col-10 px-0">
+                <div class="container-fluid">
+                    <h1 class="m-3 fw-bold">Admin panel</h1>
+                    <div class="tab-content" id="tabContent">
+                        <ul class="nav nav-tabs">
+                            <a class="nav-link" data-toggle="tab" href="/admin/adminPage">Users Table</a>
+                            <a class="nav-link active" data-toggle="tab">New User</a>
+                        </ul>
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="m-1">
+                                    <h4>Add new user</h4>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md bg-white border">
+                            <form align="center" class="offset-md-4 col-md-3 mt-4 mb-4"
+                                  th:align="center"
+                                  th:action="@{/admin/addNewUser}"
+                                  th:object="${user}"
+                                  method="POST">
+                                <label for="name"><b>First name</b></label>
+                                <input th:name="name" th:type="text" class="form-control" id="name" required/>
+                                <br>
+                                <label for="lastname"><b>Last name</b></label>
+                                <input th:name="lastname" th:type="text" class="form-control" id="lastname" required/>
+                                <br>
+                                <label for="age"><b>Age</b></label>
+                                <input th:name="age" th:type="text" class="form-control" id="age" required/>
+                                <br>
+                                <label for="email"><b>Email</b></label>
+                                <input th:name="email" th:type="text" class="form-control" id="email" required/>
+                                <br>
+                                <label for="password"><b>Password</b></label>
+                                <input th:name="password" th:field="*{password}" th:type="password" class="form-control"
+                                       id="password"/>
+                                <br>
+                                <label for="roles"><b>Role</b></label>
+                                <select multiple class="form-control form-control-sm" id="roles" name="roles" size="2" required>
+                                    <option th:each="role: ${roles}" th:value="${role.role}" th:selected="${user.roles.contains(role)}">
+                                        <th:block th:text="${role.role}">
+                                        </th:block>
+                                    </option>
+                                </select>
+                                <br>
+                                <button th:type="submit" class="btn btn-success btn-lg" value="Add new user">Add new user
+                                </button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
-
 </html>
