--- a/src/main/resources/templates/adminPage.html
+++ b/src/main/resources/templates/adminPage.html
@@ -1,52 +1,223 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="https://www.thymeleaf.org/">
+<html lang="en" class="h-100"
+      xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Users</title>
+    <title>Admin Panel</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 <body>
-<form th:action="@{/logout}" method="POST">
-    <input type="submit" value="Log out"/>
-</form>
-<h2>All Users</h2>
-<br>
-<div>
-    <table border="1" style="border-collapse: collapse">
-        <tr>
-            <th scope="col">Id</th>
-            <th scope="col">Age</th>
-            <th scope="col">Email</th>
-            <th scope="col">Username</th>
-            <th scope="col">Password</th>
-            <th scope="col">Roles</th>
-            <th scope="col">Operations</th>
-        </tr>
-        <tr th:each="user : ${users}">
-            <td th:text="${user.id}"></td>
-            <td th:text="${user.age}"></td>
-            <td th:text="${user.email}"></td>
-            <td th:text="${user.username}"></td>
-            <td th:text="${user.password}"></td>
-            <td>
-                <div th:each="role : ${user.getRoles()}" th:text="${role.getRole()}"></div>
-            </td>
-            <td>
-                <form th:method="GET" th:action="@{admin/edit/{id}(id=${user.getId()})}" th:object="${user}">
-                    <input type="submit" value="Update"/>
-                </form>
-                <form th:method="DELETE" th:action="@{admin/deleteUser/{id}(id=${user.getId()})}" th:object="${user}">
-                    <input type="submit" value="Delete"/>
-                </form>
-            </td>
-        </tr>
-    </table>
-</div>
 
-<br>
+<nav class="navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+        <p class="navbar-brand text-white">
+            <b><span class="align-middle" th:text="${user.getEmail()}"></span></b>
+            <span class="align-middle">with roles:</span>
+            <span class="align-middle" th:each="role : ${user.getRoles()}" th:text="${role.getRole() + ' '}"></span>
+        </p>
+        <form th:action="@{/logout}" method="post">
+            <button type="submit" class="btn btn-dark text-secondary">Logout</button>
+        </form>
+    </div>
+</nav>
 
-<input type="button" value="Add new user" onclick="window.location.href='admin/addNewUser'"/>
+<section>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="p-0 col-2">
+                <div class="nav flex-column nav-pills pt-4" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+                    <a class="nav-link active" href="/admin/adminPage" sec:authorize="hasAuthority('ADMIN')" role="tab"
+                       aria-controls="v-pills-home" aria-selected="true">Admin</a>
+                    <a class="nav-link" href="/user/userPage" sec:authorize="(hasAnyAuthority('ADMIN', 'USER'))"
+                       role="tab"
+                       aria-controls="v-pills-profile" aria-selected="false">User</a>
+                </div>
+            </div>
+            <div class="col-10 px-0">
+                <div class="container-fluid">
+                    <h1 class="m-3 fw-bold">Admin panel</h1>
+                    <div class="tab-content" id="tabContent">
+                        <ul class="nav nav-tabs">
+                            <a class="nav-link active" data-toggle="tab" th:href="@{/admin/adminPage}">Users Table</a>
+                            <a class="nav-link" data-toggle="tab" th:href="@{/admin/addNewUser}">New User</a>
+                        </ul>
+                        <div class="card">
+                            <div class="card-header">
+                                <div class="m-1">
+                                    <h4>All users</h4>
+                                </div>
+                            </div>
+
+                            <div class="card-body" bg-primary text-white>
+                                <table class="table table-striped table-hover">
+                                    <thead>
+                                        <tr>
+                                            <th>ID</th>
+                                            <th>First Name</th>
+                                            <th>Last Name</th>
+                                            <th>Age</th>
+                                            <th>Email</th>
+                                            <th>Role</th>
+                                            <th>Edit</th>
+                                            <th>Delete</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    <tr th:each="user : ${users}">
+                                        <td th:text="${user.getId()}">id</td>
+                                        <td th:text="${user.getName()}">id</td>
+                                        <td th:text="${user.getLastname()}">id</td>
+                                        <td th:text="${user.getAge()}">id</td>
+                                        <td th:text="${user.getEmail()}">name</td>
+                                        <td>
+                                            <th:block th:each="role: ${user.getRoles()}" th:text="${role.getRole()} + ' '"></th:block>
+                                        </td>
+                                        <td>
+                                            <a type="button" class="btn btn-sm btn-info text-light" data-bs-toggle="modal"
+                                               data-bs-target="#editModal"
+                                               th:data-bs-target="${'#editModal'+user.getId}">Edit</a>
+                                        </td>
+                                        <td>
+                                            <a type="button" class="btn btn-sm btn-danger" data-bs-toggle="modal"
+                                               data-bs-target="#DELETE"
+                                               th:data-bs-target="${'#DELETE'+user.getId}">Delete</a>
+                                        </td>
+
+                                        <div class="modal fade" th:id="${'editModal'+user.getId}"
+                                             aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" modal-dialog-centered>
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="editModalLabel">Edit user</h5>
+                                                        <button type="button" class="btn-close" data-bs-dismiss="modal"
+                                                                aria-label="Close"></button>
+                                                    </div>
+                                                    <form th:action="@{/admin/adminPage/edit/{id}(id=${user.getId})}"
+                                                          th:object="${user}" th:method="PUT">
+                                                        <div class="modal-body col-md text-center">
+                                                            <br>
+                                                            <label for="id0"><b>ID</b></label>
+                                                            <input th:name="id" th:type="text"
+                                                                   class="form-control" id="id0"
+                                                                   th:value="${user.id}" disabled/>
+                                                            <br>
+                                                            <label for="name0"><b>First name</b></label>
+                                                            <input th:name="name" th:type="text"
+                                                                   class="form-control" id="name0"
+                                                                   th:value="${user.name}"/>
+                                                            <br>
+                                                            <label for="lastname0"><b>Last name</b></label>
+                                                            <input th:name="lastname" th:type="text"
+                                                                   class="form-control" id="lastname0"
+                                                                   th:value="${user.lastname}"/>
+                                                            <br>
+                                                            <label for="age0"><b>Age</b></label>
+                                                            <input th:name="age" th:type="text"
+                                                                   class="form-control" id="age0"
+                                                                   th:value="${user.age}"/>
+                                                            <br>
+                                                            <label for="email0"><b>Email</b></label>
+                                                            <input th:name="email" th:type="email"
+                                                                   class="form-control" id="email0"
+                                                                   th:value="${user.email}" required/>
+                                                            <br>
+                                                            <label for="password0"><b>Password</b></label>
+                                                            <input th:name="password" type="password"
+                                                                   class="form-control" id="password0" required/>
+                                                            <br>
+                                                            <label for="roles"><b>Role</b></label>
+                                                            <select multiple class="form-control form-control-sm" id="roles" name="roles" size="2" required>
+                                                                <option th:each="role: ${roles}" th:value="${role.getRole()}" th:selected="${user.roles.contains(role)}">
+                                                                    <th:block th:text="${role.getRole()}">
+                                                                    </th:block>
+                                                                </option>
+                                                            </select>
+                                                            <br><br>
+                                                        </div>
+                                                        <div class="modal-footer">
+                                                            <button type="submit" class="btn btn-primary">
+                                                                Edit
+                                                            </button>
+                                                            <button type="button" class="btn btn-secondary"
+                                                                    data-bs-dismiss="modal">Close
+                                                            </button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="modal fade" th:id="${'DELETE'+user.getId}"
+                                             aria-labelledby="exampleModalLabel" aria-hidden="true">
+                                            <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h5 class="modal-title" id="exampleModalLabel">Delete
+                                                            user</h5>
+                                                        <button type="button" class="btn-close"
+                                                                data-bs-dismiss="modal"
+                                                                aria-label="Close"></button>
+                                                    </div>
+                                                    <form class="modal-body col-md text-center"
+                                                          th:action="@{/admin/adminPage/delete/{id}(id=${user.getId})}"
+                                                          th:method="DELETE">
+                                                        <div class="modal-body col-md">
+                                                            <label for="id"><b>ID</b></label>
+                                                            <input th:name="id" th:type="text" class="form-control"
+                                                                   id="id" th:value="${user.getId}" disabled/>
+                                                            <br>
+                                                            <label for="name1"><b>First name</b></label>
+                                                            <input th:name="firstname" th:type="text"
+                                                                   class="form-control"
+                                                                   id="name1" th:value="${user.getName()}" disabled/>
+                                                            <br>
+                                                            <label for="lastname1"><b>Last name</b></label>
+                                                            <input th:name="lastname" th:type="text"
+                                                                   class="form-control"
+                                                                   id="lastname1" th:value="${user.getLastname()}" disabled/>
+                                                            <br>
+                                                            <label for="age1"><b>Age</b></label>
+                                                            <input th:name="age" th:type="text"
+                                                                   class="form-control"
+                                                                   id="age1" th:value="${user.getAge()}" disabled/>
+                                                            <br>
+                                                            <label for="email1"><b>Email</b></label>
+                                                            <input th:name="email" th:type="text"
+                                                                   class="form-control"
+                                                                   id="email1" th:value="${user.getEmail}" disabled/>
+                                                            <br>
+                                                        </div>
+
+                                                        <div class="modal-footer">
+                                                            <button type="button" class="btn btn-secondary"
+                                                                    data-bs-dismiss="modal">Close
+                                                            </button>
+                                                            <button type="submit" class="btn btn-danger">Delete
+                                                            </button>
+                                                        </div>
+                                                    </form>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
